# heffree-dev

./: .gitignore  Cargo.toml  README.md  bucket-policy.json  build-and-deploy.sh  making-logo.html
.github/workflows/: cd.yml
src/: main.rs
src/assets/: index.html  index.md
src/assets/bliki/: about-me-continued.md  guess-i-blog-now.md  project-db-client-1.md  project-db-client-pre.md  project-personal-site.md  project-planning-poker-post.md
src/assets/blog/: about-me-continued.md  anxiety.md  broken-wrist.md  guess-i-blog-now.html  guess-i-blog-now.md  i-like-typescript.md  index.html  project-beebfam-1.md  project-db-client-1.md  project-db-client-post.md  project-db-client-pre.md  project-personal-site-1.md  project-personal-site.md  project-planning-poker-post.md  project-timewaste-pre.md  rsi-and-sicp.md
src/assets/blog/posts/: guess-i-blog-now.md
src/assets/css/: index.css
src/assets/images/: agile-ante-demo.webm
src/assets/js/: rain.js
src/assets/tools/: index.html
src/generator/: mod.rs  process_assets.rs
src/templates/: bliki-index.hbs  blog-index.hbs  layout.hbs
