[package]
name = "heffree-dev"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.42"
handlebars = "6.3.2"
html-escape = "0.2.13"
markdown = "1.0.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
syntect = "5.3.0"
walkdir = "2.5.0"
